[TASK-20625] fixed integration tests for mocks module